--- a/node/package.json
+++ b/node/package.json
@@ -1,26 +1,28 @@
 {
   "name": "node",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && chmod 755 build/index.js"
+    "build": "tsc && chmod 755 build/server.js"
   },
-  "files": ["build"],
+  "files": [
+    "build"
+  ],
   "type": "module",
   "bin": {
-    "weather": "./build/index.js"
+    "weather": "./build/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.17.1",
+    "@modelcontextprotocol/sdk": "^1.17.3",
     "zod": "^3.25.76"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
+    "@types/node": "^24.3.0",
     "typescript": "^5.9.2"
   }
 }
